--- a/index.html
+++ b/index.html
@@ -91,23 +91,21 @@
         <h2 class="titleBot">Let's work together...</h2>
         <div class="textBot">How do you take your coffee?</div>
         <div class="contactBot">
-            <a href="#about" class="contactBotText"><img
-                    src="https://cdn-icons-png.flaticon.com/128/725/725350.png"
+            <a href="#about" class="contactBotText"><img src="https://cdn-icons-png.flaticon.com/128/725/725350.png"
                     alt="" class="iconImg">Facebook</a>
-            <a href="#about" class="contactBotText"><img
-                    src="https://cdn-icons-png.flaticon.com/128/160/160161.png"
+            <a href="#about" class="contactBotText"><img src="https://cdn-icons-png.flaticon.com/128/160/160161.png"
                     alt="" class="iconImg">GitHub</a>
-            <a href="#about" class="contactBotText"><img
-                    src="https://cdn-icons.flaticon.com/png/128/2875/premium/2875362.png?token=exp=1646970126~hmac=c2efc6ad5db58cdf37a52a7883786cf2"
+            <a href="#about" class="contactBotText"><img src="https://cdn-icons-png.flaticon.com/128/324/324100.png"
                     alt="" class="iconImg">Send a mail</a>
-            <a href="#about" class="contactBotText"><img src="https://cdn-icons.flaticon.com/png/128/1959/premium/1959257.png?token=exp=1646970156~hmac=0ae53a205d8e7b6001ee3c40a0263207" alt=""
-                    class="iconImg">Call me</a>
+            <a href="#about" class="contactBotText"><img src="https://cdn-icons-png.flaticon.com/128/126/126509.png"
+                    alt="" class="iconImg">Call me</a>
         </div>
     </div>
 
     <footer>
-        <a href="#about" class="textLeftFooter">**This is just a fake portfolio. All the projects and contact details given are not real.</a>
-        <a class="textRightFooter">© Created for mindX <a href="#about" >Technology School</a></a>
+        <a href="#about" class="textLeftFooter">**This is just a fake portfolio. All the projects and contact details
+            given are not real.</a>
+        <a class="textRightFooter">© Created for mindX <a href="#about">Technology School</a></a>
     </footer>
 
     <script src="index.js"></script>
